tests/macros/unknown/async-option.rs
fn main() {
    let q = inquisition::questions![input { async name: 0 }];
}
